# twelve

./: Dockerfile  README.md  makefile  stack.yaml  twelve.cabal
.github/workflows/: haskell.yml
app/: Main.hs
assets/: base.html  card1.html  card2.html  nav.html  nav_li.html
src/: CLI.hs  Config.hs
src/CLI/: Build.hs  Init.hs  Serve.hs
src/Text/: Html.hs  JS.hs
src/Text/Xml/: Lens.hs
