name:                twelve
version:             0.1.0.0
synopsis:            Like 11ty, but this goes up to 12
-- description:
homepage:            https://github.com/ocramz/twelve
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2020 Marco Zocca
category:            HTML
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Text.Xml.Lens
                       Text.Xml.Lens.LowLevel
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , html-conduit
                     , lens
                     , text
                     , xml-conduit

executable twelve
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , twelve

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twelve
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/twelve
