name:                twelve
version:             0.1.0.0
synopsis:            Like 11ty, but this goes up to 12
-- description:
homepage:            https://github.com/ocramz/twelve
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2020 Marco Zocca
category:            HTML
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     CLI
                       CLI.Init
                       CLI.Build
                       Config
                       Text.Html
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , html-conduit
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , parser-combinators
                     , text
                     , xml-conduit
                     , xml-types

executable twelve
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , twelve

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twelve
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/twelve
